recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:16: error: not found: value l
	l=l+1;
        ^Spiral:17: error: not found: value i
	i=i+1; 
        ^