recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
	if(steps==0){
		return;
	}
	else{
		gauche(angle);
		avance(length);
	}
}

	for(i<- 5 to 0){
	var l=1;
	spiral(i,90,l,3);
	}
	l=l+1;
	i=i+1;